# routes/nba_players.js
@@ -2,8 +2,8 @@ const express = require("express");
 const bodyParser = require("body-parser");
 const router = express.Router();
 const validation = require("../validation");
-
 const port = process.env.PORT || 8080;
+const User = require("../User");
 
 router.use(bodyParser.json());
 
@@ -46,30 +46,22 @@ router.post(
   }
 );
 
-router.post("/", (req, res) => {
-  const newUser = new User({
-    email: req.body.email,
-    password: req.body.password,
-  });
-
-  /**
-   * #swagger.tags = ["NBA Players"]
-   * #swagger.summary = "Create a new user"
-   * #swagger.description = "Endpoint to create a new user"
-   * #swagger.parameter['obj'] => {
-   * in: 'body',
-   * type: 'object',
-   * description: 'Player data'}
-   */
-});
-
-// newUser.save(function (err) {
-//   if (err) {
-//     console.log(err);
-//   } else {
-//     console.log("work here");
-//   }
-// });
+router.post(
+  "/user",
+  validation.saveCreatedUser,
+  playersController.createUser,
+  () => {
+    /**
+     * #swagger.tags = ["NBA Players"]
+     * #swagger.summary = "Create a new user"
+     * #swagger.description = "Endpoint to create a new user"
+     * #swagger.parameter['obj'] => {
+     * in: 'body',
+     * type: 'object',
+     * description: 'Player data'}
+     */
+  }
+);
 
 router.put(
   "/:id",
