# swagger-output.json
@@ -5,16 +5,22 @@
     "description": "API that handles a database of players",
     "version": "1.0.0"
   },
-  "host": "nba-sa92.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
-  "schemes": ["https"],
+  "schemes": [
+    "http"
+  ],
   "paths": {
     "/nba_players/": {
       "get": {
-        "tags": ["NBA Players"],
+        "tags": [
+          "NBA Players"
+        ],
         "summary": "Get all of the players in the database",
         "description": "Endpoint to get all of the players in the database",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -25,6 +31,9 @@
         }
       },
       "post": {
+        "tags": [
+          "NBA Players"
+        ],
         "summary": "Create a new player",
         "description": "Endpoint to create a new player",
         "parameters": [
@@ -74,9 +83,14 @@
     },
     "/nba_players/{id}": {
       "get": {
+        "tags": [
+          "NBA Players"
+        ],
         "summary": "Get a single player from the database",
         "description": "Endpoint to get a single contact from the database",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -95,6 +109,9 @@
         }
       },
       "put": {
+        "tags": [
+          "NBA Players"
+        ],
         "summary": "Modify a player",
         "description": "Endpoint to get a single player from the database and modify it",
         "parameters": [
@@ -139,6 +156,9 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "412": {
             "description": "Precondition Failed"
           },
@@ -148,6 +168,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "NBA Players"
+        ],
         "summary": "Delete a player from the database",
         "description": "Endpoint to delete a player from the database",
         "parameters": [
@@ -164,6 +187,43 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/nba_players/user": {
+      "post": {
+        "tags": [
+          "NBA Players"
+        ],
+        "summary": "Create a new user",
+        "description": "Endpoint to create a new user",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
